# mytelegent

./: .env.example  conftest.py  main.py  pyproject.toml  qa_test_write.txt  run_scheduler.py  work_plan.json
agents/: __init__.py  parser.py  parsing_agent.py  refiner_agent.py  scheduler_agent.py
database/: messages.db  test_messages.db
docs/: architecture.md  product-spec.md  progress.md  vision.md
prompts/: parsing_prompt.md  refiner_prompt.md
schemas/: models.py
tests/: e2e_validation.py  test_core_infra.py  test_e2e.py  test_e2e_flow.py  test_encryption.py  test_parser.py  test_parsing_agent.py  test_scheduler_agent.py  test_system_validation.py  test_system_validation.py`  test_telegram_tool.py
tools/: __init__.py  config.py  db_tool.py  encryption_tool.py  local_llm_tool.py  logging_tool.py  telegram_tool.py  time_tool.py
