[project]
name = "tiny-jarvis"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "telethon>=1.36.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
develop = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0"
]